--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,10 @@
   <!--<base href="/">-->
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!--[if IE]>
+    <link rel="stylesheet" type="text/css" href="assets/css/ie.css" />
+  <![endif]-->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
