More changes made to files and form fields

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,22 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
   <meta charset="utf-8">
-  <title>American Express Middle East | CFO Research</title>
+  <meta property="og:title" content="Global Business &amp; Spending Outlook 2018" />
+  <meta property="og:description" content="The 2018 Global Business &amp; Spending Outlook details Middle East's executives' views on the economic outlook, spending plans, and the future of technology" />
+  <meta property="og:url" content="https://secure.americanexpress.com.bh/insights/index.html" />
+  <meta property="og:image" content="https://secure.americanexpress.com.bh/insights/assets/presentation/slide1.jpeg" />
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-50637775-14"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-50637775-14');
+  </script>
+
+  <title>Global Business &amp; Spending Outlook 2018</title>
   <!--<base href="/">-->
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -45,7 +59,7 @@
       }
     }
   </style>
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico?v=2">
 </head>
 <body>
     <div id="preloader">
